@@ -14,6 +14,16 @@
 
         Reviewed by Xan Lopez.
 
+        Provides a new API to copy WebKitWebHistoryItem objects.
+
+        * webkit/webkitwebhistoryitem.cpp:
+        (webkit_web_history_item_copy):
+        * webkit/webkitwebhistoryitem.h:
+
+2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Reviewed by Xan Lopez.
+
         Make sure we get the URI that is being loaded when updating
         WebKitWebFrame's knowledge of it. This was causing problems now
         that page cache is enabled.
